# picoproblems

./: Cargo.toml  README
python/aoc/: aoc2015.py  aoc2016.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/aoc/: aoc_2015.rs  aoc_2024.rs  mod.rs
src/: graph.rs  main.rs
src/aoc/: aoc_2015.rs  aoc_2018.rs  aoc_2022.rs  aoc_2024.rs
